# mad-os

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  THIRD_PARTY_LICENSES.md  TROUBLESHOOTING.md  build-iso.sh  build-limine-iso.sh  create-kernel-symlinks.sh  explore-disk.sh  packages-developer.x86_64  packages-media.x86_64  packages-minimal.x86_64  packages-standard.x86_64  packages.optional-heavy.x86_64  packages.x86_64  pacman.conf  patch-limine-iso.sh  profiledef.sh  pyproject.toml  requirements.txt  run-debug-kernel.sh  run-debug.sh  run-edit-grub.sh  run-grub-rescue.sh  run-ide-disk.sh  run-installed.sh  run-monitor.sh  run-no-kvm.sh  run-qemu.sh  run-serial.sh  serve-iso.sh  sonar-project.properties  test-post-install-demo.sh
.github/: copilot-instructions.md
docs/: BUILD.md  CREDITS.md  CUSTOMIZATION.md  FEATURES.md  HARDWARE.md  HARDWARE_QUIRKS.md  SEQUENCE_DIAGRAMS.md  TROUBLESHOOTING.md  _config.yml  download-info.html  download-info.json  index.html  script.js
efiboot/: limine.cfg
grub/: grub.cfg  loopback.cfg
limine/: limine.cfg
syslinux/: archiso_pxe-linux.cfg  archiso_sys-linux-compat.cfg  archiso_sys-linux.cfg  archiso_sys.cfg  limine-bios.sys
tests/: conftest.py  generate-config.py  test-first-boot-simulation.sh  test-installer-disk-install.sh  test_audio_player.py  test_audio_quality.py  test_bluetooth.py  test_boot_compat_entries.py  test_boot_scripts.py  test_download_progress.py  test_equalizer_backend.py  test_equalizer_database.py  test_equalizer_presets.py  test_first_boot.py  test_gamepad_wm.py  (+35 more)
(+384 files in other folders)
